# nexus

./: README.md  todo-scanner.sh
.github/workflows/: todo-to-issues.yml  workflow-check.yml
.mds/: BusinessModel.md  Nexus — Implementation Plan.md  test.md  v1-implementation-plan.md
backend/: pyproject.toml  requirements.txt  scratch_omium.py
backend/app/: main.py
backend/app/agents/: action.py  pipeline.py  planner.py  researcher.py  state.py
backend/app/api/: auth.py  custom_webhooks.py  github_webhooks.py  slack.py  webhooks.py  websocket.py  workflows.py
backend/app/graphs/: pipeline.py
backend/app/models/: database.py  schemas.py  slack_models.py  user_models.py  webhook_models.py  workflow_models.py
backend/app/services/: llm.py  omium_tracing.py  trace.py  ws_manager.py
backend/app/tools/: email_tool.py  fetch_url.py  slack.py  tavily.py
backend/app/utils/: auth_utils.py
frontend/: index.html  package.json  vite.config.ts
frontend/api/: api.ts
frontend/src/: App.tsx  index.css
frontend/src/components/landing/: CTA.tsx  Features.tsx  Footer.tsx  Hero.tsx  Navbar.tsx  Testimonials.tsx  WhyUs.tsx
frontend/src/components/layout/: Header.tsx  Layout.tsx  ProtectedRoute.tsx  Sidebar.tsx
frontend/src/data/: mock.ts
frontend/src/lib/: api.ts  auth-context.tsx  queries.ts
frontend/src/pages/: Dashboard.tsx  GithubCallback.tsx  Home.tsx  IntegrationsPage.tsx  OnboardingPage.tsx  ProfilePage.tsx  SignIn.tsx  SignUp.tsx  SlackCallback.tsx  TriggerPage.tsx  WorkflowDetail.tsx
frontend/src/types/: index.ts
(+5 files in other folders)
